More functional features

--- a/Uploader/templates/delete.html
+++ b/Uploader/templates/delete.html
@@ -4,13 +4,12 @@
 
 
 {% block body %}
-    <h2>Eliminate a ride bro!!</h2>
+
+    <h2>Eliminate a ride for sure bro!!</h2>
 
     <form method="post">{% csrf_token %}
-        <p>Are you sure you want to delete "{{ object }}"?</p>
-        <input type="submit" value="Confirm Delete">
+        <h2>Are you sure you want to delete "{{ object.name }}"?</h2>
+        <p><input type="submit" value="Confirm Delete"><a href="{% url 'app:home' %}">Cancel</a></p>
     </form>
-
-
 
 {% endblock %}
